@@ -7,6 +7,7 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -49,6 +50,10 @@ public class ProcessMapRepositoryTest {
 	private DataStoreDao dataStoreDao;
 	@Mock
 	private DataStoreConnectionDao dataStoreConnectionDao;
+	@Mock
+	private CallActivityDao callActivityDao;
+	@Mock
+	private ProcessEventDao processEventDao;
 
 	@BeforeEach
 	public void setup() {
@@ -64,7 +69,9 @@ public class ProcessMapRepositoryTest {
 				processModelDao, //
 				processConnectionDao, //
 				dataStoreDao, //
-				dataStoreConnectionDao);
+				dataStoreConnectionDao, //
+				callActivityDao, //
+				processEventDao);
 
 		ProcessModelTable processModel1 = new ProcessModelTable();
 		processModel1.setId(PROCESS_MODEL_ID_1);
@@ -85,20 +92,20 @@ public class ProcessMapRepositoryTest {
 		processConnectionTable.setCalledProcess(processModel2);
 		processConnectionTable.setCalledElement(CALLED_ELEMENT_ID);
 		processConnectionTable.setCalledElementType(ProcessElementType.START_EVENT);
+
+		when(processConnectionDao.getProcessConnections(any())).thenReturn(List.of(processConnectionTable));
 		processConnectionTable.setLabel(COMMON_LABEL);
-		
-		when(processConnectionDao.getProcessConnections(any())).thenReturn(Arrays.asList(processConnectionTable));
 
 		DataStoreTable dataStoreTable = new DataStoreTable();
 		dataStoreTable.setLabel(DATA_STORE_LABEL);
 		dataStoreTable.setId(DATA_STORE_ID);
-		when(dataStoreDao.getDataStores(any())).thenReturn(Arrays.asList(dataStoreTable));
+		when(dataStoreDao.getDataStores(any())).thenReturn(List.of(dataStoreTable));
 
 		DataStoreConnectionTable dataStoreConnectionTable = new DataStoreConnectionTable();
 		dataStoreConnectionTable.setProcess(processModel1);
 		dataStoreConnectionTable.setDataStore(dataStoreTable);
 		dataStoreConnectionTable.setAccess(DataAccess.READ_WRITE);
-		when(dataStoreConnectionDao.getDataStoreConnections(any())).thenReturn(Arrays.asList(dataStoreConnectionTable));
+		when(dataStoreConnectionDao.getDataStoreConnections(any())).thenReturn(List.of(dataStoreConnectionTable));
 
 		// Act
 		ProcessMap processMap = repository.getProcessMap(anyLong());
